--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -99,7 +99,7 @@ pre {
     </div>
 </div>
 
-<p>Differential Evolution (DE) is a stochastic genetic search algorithm for global optimization of potentially ill-behaved nonlinear functions.</p>
+<p>Particle Swarm Optimization (PSO) is a stochastic swarm intelligence algorithm for global optimization of potentially ill-behaved nonlinear functions.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
