--- a/optimlib.html
+++ b/optimlib.html
@@ -75,7 +75,8 @@ pre {
 <div class="row">
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <a href="optimlib_docs_bfgs.html#examples" target="_blank"><img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>
+        <!-- <a href="optimlib_docs_bfgs.html#examples" target="_blank"><img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a> -->
+         <a href="optimlib_docs_pso.html#examples" target="_blank"><img src="pics/table_fn_3d.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a> 
     </div>
     <div class="col-md-4">
         <br>
