--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -185,7 +185,7 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
 <ul>
     <li>The Table function:</li>
     $$\min_{x \in [-10,10]^2} \left\{ - \left| \sin (x_1) \cos(x_2) \exp \left( \left| 1 - \frac{\sqrt{x_1^2 + x_2^2}}{\pi} \right| \right) \right| \right\}$$
-    <li>Ackley's function:</li>
+    <li>Bukin's function No.6:</li>
     $$\min_{x \in [-15,-5], y \in [-3,3]} \left\{ 100 \sqrt{| y - 0.01 x^2|} + 0.01 | x + 10 | \right\}$$
 </ul>
 
