--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <!-- Marketing Icons Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">
-                    Welcome 
-                </h1>
+                <!-- <h1 class="page-header"> Welcome </h1> -->
+                 <h1> Welcome </h1> 
+                <hr style="height:2px;border-width:0;background-color:black">
             </div>
             <!-- <p><i class="fa fa-exclamation-triangle fa-2x"></i> This site is a work in progress</p> -->
             <div class="col-md-4">
